{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 62,
  "lineage": "12ef26a2-7a6d-022c-e26b-60217bcceefa",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-0944e5a962e55694d",
                "route_table_id": "rtb-0be6f9495df92d100",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "default"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-0be6f9495df92d100",
            "owner_id": "554660509057",
            "route_table_id": "rtb-0be6f9495df92d100",
            "routes": [
              {
                "cidr_block": "5.10.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-058648de259737bc6"
              },
              {
                "cidr_block": "7.10.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0e8c438968b367f22"
              },
              {
                "cidr_block": "10.10.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0d257c55a0bf178dc"
              },
              {
                "cidr_block": "13.10.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0437c539162cdaaaf"
              },
              {
                "cidr_block": "15.10.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-003cd4507d8a3882e"
              },
              {
                "cidr_block": "16.10.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-035abaf5957ebfcc1"
              },
              {
                "cidr_block": "19.10.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-03e5f73001da75ae2"
              },
              {
                "cidr_block": "21.10.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-04d5a84ea4f74643e"
              },
              {
                "cidr_block": "29.10.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0eb52a9479dfdfbe5"
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f985809840d756de",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "default"
            },
            "vpc_id": "vpc-07e3b3af9b264e7ad"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:vpc/vpc-07e3b3af9b264e7ad",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f2466704f762452e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-2f524347",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "default"
                ]
              }
            ],
            "id": "vpc-07e3b3af9b264e7ad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0be6f9495df92d100",
            "owner_id": "554660509057",
            "state": "available",
            "tags": {
              "Name": "default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f64fd9e493fb1f0c",
            "domain": "vpc",
            "id": "eipalloc-0425f4c7c479fab80",
            "network_border_group": "us-east-2",
            "network_interface": "eni-03f52d23123d58a14",
            "private_dns": "ip-10-10-10-148.us-east-2.compute.internal",
            "private_ip": "10.10.10.148",
            "public_dns": "ec2-18-216-35-206.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.35.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "thinknyx-kul"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0010499d417b154b6",
            "arn": "arn:aws:ec2:us-east-2:554660509057:instance/i-05847bd3b10861baf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05847bd3b10861baf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kul-ericsson-thinknyx",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5dfd7740ba78326",
            "private_dns": "ip-10-10-20-70.us-east-2.compute.internal",
            "private_ip": "10.10.20.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01745488a5ca10cc3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b5e2041c4c1f04e",
            "tags": {
              "Name": "thinknyx-kul"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-031871084569ab097"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.sn-2",
            "aws_vpc.vpc",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:internet-gateway/igw-0a36ba513a1e7f2ee",
            "id": "igw-0a36ba513a1e7f2ee",
            "owner_id": "554660509057",
            "tags": {
              "Name": "thinknyx-kul"
            },
            "vpc_id": "vpc-030b3218eb9944513"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0425f4c7c479fab80",
            "id": "nat-0aa811397162fc713",
            "network_interface_id": "eni-03f52d23123d58a14",
            "private_ip": "10.10.10.148",
            "public_ip": "18.216.35.206",
            "subnet_id": "subnet-01b68ab1765ba97db",
            "tags": {
              "Name": "thinknyx-kul"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.sn-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pc_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0be6f9495df92d100519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be6f9495df92d100",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": "pcx-0d257c55a0bf178dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pc",
            "data.aws_caller_identity.current",
            "data.aws_route_table.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07f868700c8786464",
            "owner_id": "554660509057",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a36ba513a1e7f2ee",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "thinknyx-kul-igw"
            },
            "vpc_id": "vpc-030b3218eb9944513"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "natgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c3a81911aa2d8e2f",
            "owner_id": "554660509057",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0aa811397162fc713",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "172.31.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "pcx-0d257c55a0bf178dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "thinknyx-kul-natgw"
            },
            "vpc_id": "vpc-030b3218eb9944513"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.natgw",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b810ace21a7e3db3",
            "route_table_id": "rtb-07f868700c8786464",
            "subnet_id": "subnet-01b68ab1765ba97db"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.igw_rt",
            "aws_subnet.sn-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "natgw_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b978a730aaba6c5",
            "route_table_id": "rtb-0c3a81911aa2d8e2f",
            "subnet_id": "subnet-03b5e2041c4c1f04e"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.natgw_rt",
            "aws_subnet.sn-1",
            "aws_subnet.sn-2",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pc",
            "data.aws_caller_identity.current",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "natgw_rt_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ab9faad2b4f0e19",
            "route_table_id": "rtb-0c3a81911aa2d8e2f",
            "subnet_id": "subnet-0bfc964eafa28882c"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.natgw_rt",
            "aws_subnet.sn-1",
            "aws_subnet.sn-3",
            "aws_vpc.vpc",
            "aws_vpc_peering_connection.pc",
            "data.aws_caller_identity.current",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:security-group/sg-031871084569ab097",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "external access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031871084569ab097",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16",
                  "172.31.0.0/16"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "EFS Access",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "thinknyx-kul",
            "name_prefix": "",
            "owner_id": "554660509057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "thinknyx-kul"
            },
            "timeouts": null,
            "vpc_id": "vpc-030b3218eb9944513"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:subnet/subnet-01b68ab1765ba97db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-01b68ab1765ba97db",
            "map_public_ip_on_launch": true,
            "owner_id": "554660509057",
            "tags": {
              "Name": "thinknyx-kul-public"
            },
            "vpc_id": "vpc-030b3218eb9944513"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:subnet/subnet-03b5e2041c4c1f04e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.20.0/24",
            "id": "subnet-03b5e2041c4c1f04e",
            "map_public_ip_on_launch": false,
            "owner_id": "554660509057",
            "tags": {
              "Name": "thinknyx-kul-private"
            },
            "vpc_id": "vpc-030b3218eb9944513"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:subnet/subnet-0bfc964eafa28882c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.10.30.0/24",
            "id": "subnet-0bfc964eafa28882c",
            "map_public_ip_on_launch": false,
            "owner_id": "554660509057",
            "tags": {
              "Name": "thinknyx-kul-private"
            },
            "vpc_id": "vpc-030b3218eb9944513"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:554660509057:vpc/vpc-030b3218eb9944513",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a6ea5d4fd4309413",
            "default_route_table_id": "rtb-044776f3b680b8ba2",
            "default_security_group_id": "sg-0a670698af8456462",
            "dhcp_options_id": "dopt-2f524347",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-030b3218eb9944513",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-044776f3b680b8ba2",
            "owner_id": "554660509057",
            "tags": {
              "Name": "thinknyx-kul"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "pc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0d257c55a0bf178dc",
            "peer_owner_id": "554660509057",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-07e3b3af9b264e7ad",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "thinknyx-kul"
            },
            "vpc_id": "vpc-030b3218eb9944513"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_caller_identity.current",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}